$Id$

1.1.1: (CVS)
	- changed Sys::Hostname to Sys::Hostname::Long since we need
	  the FQDN to be a valid email address.  (Thanks Joh Clarke!)
    - fixed time-out code to handle endless failure situation (from 1.0.2)
    - fixed recipient bleed-through across SEND/RESE in SNPP (from 1.0.2)
    - fixed queue filename collision (from 1.0.2)
    - added minimal "use" testing (from 1.0.2)
    - corrected version number reporting on banner (from 1.0.2)

1.1.0: (2005-06-10)
    - rearranged modem init so that failed modems will be skipped
      (thanks to Peter Smith for pointing that out).
    - adding timing arguments to command completion. (recommended
      by Russell Adams)
    - added the options "pc:cc-simple" and "pc:proto=Test" for
      functionality similar to Bill Ayres's "null PC" patch.
    - updated postfix instructions from Russell L. Adams.
    - added "max-age" PC option to age-out undelivered pages (funded
      by David St. John).
    - corrected version report
    - correct reload failure

1.0.0: (2005-02-23)
    - changed how email2page handles the header regex list.  This
      will allow each rule to match each header line, rather
      that just the first match.  Recommended by Erastus Z Allen.
    - changed syslog-facility default to "daemon".  To keep
      prior behavior, set "syslog-facility = local6".
    - created syslog-minlevel with default of "info". To keep
      prior behavior, set "syslog-minlevel = debug".
    - creating a "stable" version since I'll never reach 1.0.0  :)
    - updated copyright years
    - added older debian rules to CVS
    - created sendpage.spec from many sources
    - handling "strict parity" from Device::SerialPort
    - added "chars-per-block" config to the sendpage.cf examples
    - fixed field-spanning block code bug noticed by David St. John
    - added DBI support from Todd T. Fries
    - found evil SNPP hang bug, funded by David St. John
    - added few more comments, and renamed functions more sensibly